# speakmore

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  LICENSE  NOTICE.md  README.md  SECURITY.md  eslint.config.js  flake.nix  index.html  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-test.yml  build.yml  main-build.yml  nix-check.yml  pr-test-build.yml  release.yml  test.yml
.nix/: bun-lock-hash  bun.nix
docs/: asr-providers.md  asset-provenance.md  history.md  model-sources.md  post-processing.md  release-readiness.md
nix/: hm-module.nix  module.nix
scripts/: check-nix-deps.ts  source-release-preflight.ts
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/speakmore-keys/: Cargo.toml
src-tauri/crates/speakmore-keys/src/: lib.rs
src-tauri/crates/speakmore-keys/src/platform/: state.rs
src-tauri/crates/speakmore-keys/src/platform/linux/: listener.rs
src-tauri/crates/speakmore-keys/src/platform/windows/: keycode.rs  listener.rs  mod.rs
src-tauri/crates/speakmore-keys/src/types/: hotkey.rs
src-tauri/examples/: qwen3_asr_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: actions.rs  apple_intelligence.rs  asr.rs  audio_feedback.rs  cli.rs  context_awareness.rs  data_cli.rs  lib.rs  llm_client.rs  main.rs  overlay.rs  portable.rs  settings.rs  tray.rs  utils.rs
src/components/: Sidebar.tsx  (+1 more)
tests/: app.spec.ts
(+104 files in other folders)
