[package]
name = "speakmore-keys"
version = "0.2.4"
edition = "2021"
description = "Cross-platform global keyboard shortcuts library"
license = "MIT"
keywords = ["keyboard", "hotkey", "shortcuts", "global", "cross-platform"]
categories = ["api-bindings", "os"]

[lib]
name = "speakmore_keys"
path = "src/lib.rs"

[dependencies]
bitflags = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes", "CGEventSource", "CGRemoteOperation"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSApplication"] }
objc2-foundation = "0.3"
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rdev = { version = "0.5.3", features = ["unstable_grab"] }
